--- a/Homeworks/Homework2_accumulation_of_evidence.ipynb
+++ b/Homeworks/Homework2_accumulation_of_evidence.ipynb
@@ -69,7 +69,7 @@
       "source": [
         "## Section - Influence of Threshold on Performance [60 pts total]\n",
         "\n",
-        "We will build off the lab by exploring the relationship between decision threshold (one of the DDM parameters) and the performance of an accumulating agent.\n",
+        "How does decision thershold influence behavior? Here, we will perform a parameter sweep over the decision threshold to see how the agent is affected in a basic sniffing task.\n",
         "\n",
         "For this section, you will need to slightly modify the lab code to loop over a list of thresholds rather than a list of drift rates."
       ]
@@ -204,7 +204,7 @@
         "id": "N9wTR7VdzMEg"
       },
       "source": [
-        "### Question [5 pts]\n",
+        "### Question 3 [5 pts]\n",
         "\n",
         "Let's get philosophical. Is it better to gamble on being the best, knowing you risk death (in this task) or is it better to be average and alive? \n",
         "\n",
@@ -289,7 +289,7 @@
       "source": [
         "### Question 5 [10 pts]\n",
         "\n",
-        "Was your hypothesis correct? Compare the scores to those acheived in lab."
+        "Was your hypothesis correct? Compare the scores to those achieved in lab."
       ]
     },
     {
