--- a/Homeworks/Homework5_Curiosity.ipynb
+++ b/Homeworks/Homework5_Curiosity.ipynb
@@ -176,7 +176,7 @@
         "id": "p_H3_iUD0PQH"
       },
       "source": [
-        "### Question 2 [10 pts]\n",
+        "### Question 2 [15 pts]\n",
         "\n",
         "How do you expect your agents to perform relative to each other, in a 4-arm environment after they have been tuned? Which one will do best and which one will do worst?  Please explain your ranking, *considering the functionality and contributions of both the Actor and Critic components of each agent*. To help justify your hypothesis, it will be useful to briefly reference previous simulations and results (Labs 4/5 and HW 4)."
       ]
@@ -346,7 +346,7 @@
         "id": "gfio87eG-7vO"
       },
       "source": [
-        "### Run 400 experiments and plot the average rewards for the 3 agents [10 pts]"
+        "### Run 400 experiments and plot the average rewards for the 3 agents [5 pts]"
       ]
     },
     {
@@ -429,7 +429,7 @@
         "id": "hOzIHeXnB9WU"
       },
       "source": [
-        "### Question 4 [10 pts]\n",
+        "### Question 4 [15 pts]\n",
         "\n",
         "How well do you expect your agents to perform in the deceptive 10-arm environment, after being tuned in the non-deceptive environment?  Which one will score the highest and which one will score the lowest?\n",
         "\n",
@@ -597,7 +597,7 @@
         "id": "JV3EG9MQACTO"
       },
       "source": [
-        "### Run 400 experiments and plot the average rewards for the 3 agents [10 pts]"
+        "### Run 400 experiments and plot the average rewards for the 3 agents [5 pts]"
       ]
     },
     {
@@ -640,6 +640,15 @@
         "### Question 6 [10 pts]\n",
         "\n",
         "Time for some conclusions. Was there a clear winner among your three selected agents?  Was there one which performed the best against both non-deceptive and deceptive bandits?  Or did different agents perform better or worse in different scenarios?  Which agent would you pick as your favorite?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lRwVJbGoPy88"
+      },
+      "source": [
+        "Write your answer here."
       ]
     },
     {
