Added badge to open in Colab

--- a/Labs/Lab2_Random_exploration.ipynb
+++ b/Labs/Lab2_Random_exploration.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/CoAxLab/BiologicallyIntelligentExploration/blob/main/Labs/Lab2_Random_exploration.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -41,7 +52,9 @@
       "source": [
         "### **How to go through lab**\n",
         "\n",
-        "For this lab, you will *read through the text of this notebook* and *run each code cell* in order, as well as *follow other instructions as they come up*. Try to understand what the code that you run does. *Answer any questions as Python comments where specified*."
+        "For this lab, you will *read through the text of this notebook* and *run each code cell* in order, as well as *follow other instructions as they come up*. Try to understand what the code that you run does. *Answer any questions as Python comments where specified*.\n",
+        "\n",
+        "* **Note:** open this notebook in Colab, either using the badge at the top of the notebook or via the process described in Lab 1 (loading a GitHub file in from Colab itself)."
       ],
       "metadata": {
         "id": "h1NLiay_Fyf3"
