Explained how to read exploration lib agent code

--- a/Labs/Lab2_Random_exploration.ipynb
+++ b/Labs/Lab2_Random_exploration.ipynb
@@ -334,12 +334,20 @@
       "source": [
         "## **How do these agents work? Check the explorationlib code**\n",
         "\n",
-        "* In the left panel on Colab, click on the file icon.\n",
-        "* Navigate to `/usr/local/lib/python3.7/dist-packages/explorationlib/agent.py` and double click the file (or just click the link in this bullet) to open up the library's code for defining exploration agents.\n",
+        "* In the left panel on Colab, click on the file icon to access the file view for your Colab notebook.\n",
+        "* Click the \"..\" file to go up one level (if necessary) and then navigate to `/usr/local/lib/python3.7/dist-packages/explorationlib/agent.py` and double click the file (or just click the link in this bullet) to open up the library's code for defining exploration agents.\n",
+        "  * Note: to investigate any libraries you load in to use in Colab, you can find them in the `/usr/local/lib/python3.7/dist-packages` folder.\n",
         "* You should see the code for `agent.py` open in a panel to the right in Colab.\n",
         "* Read the definition of the Agent2d class (find the spot in the code that says `class Agent2d:` and read until just before the next class, CriticGrid, is defined).\n",
-        "* Scroll down far and read the definition for the Levy2d class, which inherits from Agent2d.\n",
-        "* Scroll down and read the definition for the last class, Diffusion2d."
+        "  * This class defines a sketch of how different agents are coded in the explorationlib library.\n",
+        "  * We see an initialization method, a random seed-setting method, etc.\n",
+        "  * All agents will have a method for randomly choosing a direction to face, specified in the `_angle` method.\n",
+        "  * There is a method `_convert` for determining (x, y) movements from angle and step length magnitudes.\n",
+        "  * There are un-implemented methods, `_l` (for detemining step size) and `forward` (for stepping forward). These methods will be implemented in the specific agent type definitions that you will read next.\n",
+        "* Scroll down far and read the definition for the Levy2d class, which inherits from the Agent2d class.\n",
+        "  * Check how the `_l` and `forward` methods are specifically implemented for the Levy agents.\n",
+        "* Scroll down and read the definition for the last class, Diffusion2d, which also inherits from Agent2d.\n",
+        "  * Check how the `_l` and `forward` methods are specifically implemented for the Diffusion agents.\n"
       ],
       "metadata": {
         "id": "ZF5Z-Glatrr9"
