--- a/Labs/Lab8_Reward_seeking.ipynb
+++ b/Labs/Lab8_Reward_seeking.ipynb
@@ -463,7 +463,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 2.1\n",
+        "### Question 2.1\n",
         "\n",
         "We will run three differnt epsilon-greedy agents, each with a different epsilon value (0.05, 0.5, and 0.95). What do you expect each agent's stepwise behavior to \"look like\"? Why?"
       ],
@@ -571,7 +571,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 2.3\n",
+        "### Question 2.3\n",
         "\n",
         "Re-run the stepwise choice behavior visualization at different `num_experiment` settings to view what happens in different experiments. Find a case when epsilon=0.05 agent didn't select the best arm (Arm 2) very much. How do you think this happened?"
       ],
